# dep-mapper-rust

./: CLAUDE.md  Cargo.toml  ENHANCED_FEATURES_SPEC.md  README.md
.claude/: settings.local.json
specs/: ENHANCED_FEATURES_SPEC.md  diagnose_command_spec.md  external_dependencies_audit.md
src/: crawler.rs  graph.rs  imports.rs  lib.rs  main.rs  pyproject.rs
src/tools/: agent.rs  changeset.rs  common.rs  cycles.rs  dependencies.rs  diagnose.rs  external.rs  impact.rs  instability.rs  mod.rs  package_mappings.json  pressure.rs
tests/: integration_test.rs  test.py
