[package]
name = "pydep-mapper"
version = "0.1.0"
edition = "2024"
description = "CLI to parse Python code and build a dependency graph (RustPython + petgraph)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/az-fouche/dep-mapper-rust/"
homepage = "https://github.com/az-fouche/dep-mapper-rust/"
keywords = ["python", "dependencies", "graph", "cli", "rustpython"]
categories = ["command-line-utilities", "parsing", "development-tools"]
rust-version = "1.89.0"

[dependencies]
rustpython-parser = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
petgraph = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5.0"
toml = "0.9.5"
indicatif = "0.18.0"

[dev-dependencies]
tempfile = "3.20.0"
