[package]
name = "pydep-mapper"
version = "0.1.5"
edition = "2024"
description = "Fast Rust CLI for analyzing Python dependencies with external package declarations support."
license = "MIT"
readme = "README.md"
repository = "https://github.com/az-fouche/dep-mapper-rust/"
homepage = "https://github.com/az-fouche/dep-mapper-rust/"
keywords = ["python", "dependencies", "analysis", "cli", "external"]
categories = ["command-line-utilities", "parsing", "development-tools"]
rust-version = "1.89.0"

[dependencies]
rustpython-parser = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
petgraph = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
toml = "0.9.5"
indicatif = "0.18.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3.20.0"
